--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 
+Practice of Complete Guide to TensorFlow for Deep Learning with Python on Udemy
+
+https://www.udemy.com/complete-guide-to-tensorflow-for-deep-learning-with-python/
